# annotated-igem-distribution

./: .gitignore  2024_Parts_List.csv  2024_parts_summary.csv  README.md  annotate_parts.py  annotate_plasmids.py  download_plannotate_databases.py  get_part_sequences.py  index.html  make_index.py  pyproject.toml
results/: 2024_Parts_List_with_sequences.csv  index.json
results/plasmids/: 1.gb  10.gb  100.gb  101.gb  102.gb  103.gb  104.gb  105.gb  106.gb  107.gb  108.gb  109.gb  11.gb  110.gb  111.gb  112.gb  113.gb  114.gb  115.gb  116.gb  117.gb  118.gb  119.gb  12.gb  120.gb  121.gb  122.gb  123.gb  124.gb  125.gb  126.gb  127.gb  128.gb  129.gb  13.gb  130.gb  131.gb  132.gb  133.gb  134.gb  (+1020 more)
results/reports/: 10.csv  102.csv  106.csv  107.csv  109.csv  110.csv  115.csv  116.csv  117.csv  122.csv  123.csv  124.csv  125.csv  128.csv  13.csv  130.csv  131.csv  132.csv  134.csv  138.csv  14.csv  141.csv  142.csv  146.csv  148.csv  149.csv  15.csv  158.csv  16.csv  164.csv  17.csv  171.csv  179.csv  18.csv  181.csv  183.csv  186.csv  189.csv  19.csv  194.csv  (+358 more)
